Add first modules

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,16 +1,7 @@
-pluginManagement {
-    repositories {
-        gradlePluginPortal()
-        google()
-        mavenCentral()
-    }
-}
-dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
-    repositories {
-        google()
-        mavenCentral()
-    }
-}
 rootProject.name = "FestivalFellow"
-include ':app'
+
+//Distribution
+include ':distribution:app',
+
+//Common
+        ':common:design'
