--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,36 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.3.1' apply false
-    id 'com.android.library' version '7.3.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+buildscript {
+    ext {
+        kotlinVersion = '1.7.21'
+    }
+
+    repositories {
+        google()
+        mavenCentral()
+        maven { url = 'https://plugins.gradle.org/m2/' }
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.4.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.44.0'
+    }
+}
+
+apply from: "params.gradle"
+apply from: "dependencies.gradle"
+
+allprojects {
+    apply plugin: 'com.github.ben-manes.versions'
+
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
+    subprojects.forEach() { project ->
+        delete project.buildDir
+    }
 }
