Add design module

--- a/common/design/build.gradle
+++ b/common/design/build.gradle
@@ -32,6 +32,8 @@ android {
 
 dependencies {
 
+    implementation libraries.kotlinStd
+
     api libraries.compose
     api libraries.composeRuntime
     api libraries.composeTooling
