--- a/distribution/app/build.gradle
+++ b/distribution/app/build.gradle
@@ -59,9 +59,8 @@ android {
 dependencies {
 
     api project(':common:design')
+    api project(':common:concurrency')
 
-    implementation libraries.coroutinesCore
-    implementation libraries.coroutinesAndroid
     implementation libraries.kotlinStd
 }
 
