--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,13 +1,15 @@
 ext {
     versions = [
-            compose         : '1.3.2',
-            composeCompiler : '1.4.0-alpha02',
-            composeMaterial3: '1.0.1',
-            coroutines      : '1.6.4',
-            jUnit5          : '5.9.1',
-            kotest          : '5.5.4',
-            leakCanary      : '2.10',
-            mockk           : '1.13.3',
+            activity       : '1.7.0-alpha03',
+            compose        : '1.4.0-alpha04',
+            composeCompiler: '1.4.0',
+            composeMaterial: '1.1.0-alpha04',
+            coroutines     : '1.6.4',
+            jUnit5         : '5.9.1',
+            kotest         : '5.5.4',
+            leakCanary     : '2.10',
+            mockk          : '1.13.3',
+            lifecycle      : '2.6.0-alpha04',
     ]
     libraries = [
             //General
@@ -20,10 +22,10 @@ ext {
             composeRuntime        : "androidx.compose.runtime:runtime:$versions.compose",
             composeTooling        : "androidx.compose.ui:ui-tooling:$versions.compose",
             composePreview        : "androidx.compose.ui:ui-tooling-preview:$versions.compose",
-            composeMaterial3      : "androidx.compose.material3:material3:$versions.composeMaterial3",
-            composeMaterial3Window: "androidx.compose.material3:material3-window-size-class:$versions.composeMaterial3",
+            composeMaterial3      : "androidx.compose.material3:material3:$versions.composeMaterial",
+            composeMaterial3Window: "androidx.compose.material3:material3-window-size-class:$versions.composeMaterial",
             composeActivity       : "androidx.activity:activity-compose:$versions.activity",
-            composeViewModel      : "androidx.lifecycle:lifecycle-viewmodel-compose:$versions.lifeCycleExtensions",
+            composeViewModel      : "androidx.lifecycle:lifecycle-viewmodel-compose:$versions.lifecycle",
 
             //Google
             accompanistDrawable   : "com.google.accompanist:accompanist-drawablepainter:$versions.accompanist",
