--- a/distribution/app/build.gradle
+++ b/distribution/app/build.gradle
@@ -13,6 +13,11 @@ android {
     namespace 'com.festivalfellow.mobile.app'
     compileSdk globalTargetSdk
 
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
+        test.java.srcDirs += 'src/test/kotlin'
+    }
+    
     defaultConfig {
         applicationId "com.festivalfellow.mobile"
         minSdk globalMinSdk
