--- a/distribution/app/src/main/AndroidManifest.xml
+++ b/distribution/app/src/main/AndroidManifest.xml
@@ -3,14 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
-        android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
+        android:name=".common.FestivalFellowApp"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.FestivalFellow"
-        tools:targetApi="31" />
+        android:supportsRtl="false"
+        tools:targetApi="33"
+        android:dataExtractionRules="@xml/data_extraction_rules" />
 
 </manifest>
