--- a/distribution/app/src/main/AndroidManifest.xml
+++ b/distribution/app/src/main/AndroidManifest.xml
@@ -5,11 +5,22 @@
     <application
         android:name=".common.FestivalFellowApp"
         android:allowBackup="false"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="false"
-        tools:targetApi="33"
-        android:dataExtractionRules="@xml/data_extraction_rules" />
+        tools:targetApi="33">
 
+        <activity
+            android:name=".view.MainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+    </application>
 </manifest>
