Add navigation module

--- a/distribution/app/build.gradle
+++ b/distribution/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
 
     api project(':common:design')
     api project(':common:concurrency')
+    api project(':common:navigation')
 
     implementation libraries.kotlinStd
 }
