--- a/common/navigation/build.gradle
+++ b/common/navigation/build.gradle
@@ -37,7 +37,7 @@ android {
 
 dependencies {
 
-    implementation(':common:design')
+    implementation project(':common:design')
 
     api libraries.navigationCompose
 }
