--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -35,6 +35,8 @@ ext {
             //Third party
             leakCanary            : "com.squareup.leakcanary:leakcanary-android:$versions.leakCanary",
             timber                : 'com.jakewharton.timber:timber:5.0.1',
+            koin                  : 'io.insert-koin:koin-android:3.3.2',
+            koinCompose           : 'io.insert-koin:koin-androidx-compose:3.4.1',
 
             //Testing
             androidXArch          : 'androidx.arch.core:core-testing:2.1.0',
